--- a/LLM/quantization_in_llama_cpp.ipynb
+++ b/LLM/quantization_in_llama_cpp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,26 +125,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x:  [ 5.11109327 12.64046683  1.46366671 ... -9.65140538 15.30215997\n",
-      " -6.34037818]\n",
-      "q:  [10. 13.  8. ...  3. 13.  5.]\n",
-      "dq:  [  5.18116379  12.60325241   0.23310661 ... -10.90161705  16.09233093\n",
-      "  -5.50282669]\n",
-      "mse:  0.6247287435426094\n",
-      "q.max: 15.0\n",
-      "q.min: 0.0\n"
+      "x:  [-8.34008678 -3.48670848 -9.30686668 ... -4.27291433 -9.67298438\n",
+      "  0.22511705]\n",
+      "q:  [ 2.  1.  3. ...  1.  3. -0.]\n",
+      "dq:  [ -7.37396145  -3.68698072 -11.0609417  ...  -3.32198882  -9.96596622\n",
+      "   0.        ]\n",
+      "mse:  0.8757239981009514\n",
+      "q.max: 7.0\n",
+      "q.min: -8.0\n"
      ]
     }
    ],
    "source": [
-    "q1 = quantizer(n_bits=4, bsz=32, use_min=True)\n",
+    "q1 = quantizer(n_bits=4, bsz=32, use_min=False)\n",
     "q = q1.quantize(x)\n",
     "dq = q1.dequantize(q)\n",
     "print(\"x: \", x)\n",
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,19 +208,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x:  [ 5.11109327 12.64046683  1.46366671 ... -9.65140538 15.30215997\n",
-      " -6.34037818]\n",
-      "q:  [10. 13.  8. ...  3. 13.  5.]\n",
-      "dq:  [ 4.84969902e+00  1.21314583e+01 -4.80651855e-03 ... -1.13745689e+01\n",
-      "  1.54529610e+01 -6.00906372e+00]\n",
-      "mse:  0.7864345575313428\n",
+      "x:  [  2.70740678  -8.25383121 -12.58215199 ...   2.41243454 -10.60010584\n",
+      "   3.9098263 ]\n",
+      "q:  [9. 5. 4. ... 8. 3. 8.]\n",
+      "dq:  [  2.31284523  -8.34332657 -11.00736904 ...   2.74177742 -11.15757561\n",
+      "   2.74177742]\n",
+      "mse:  0.7194974231267448\n",
       "q.max: 15.0\n",
       "q.min: 0.0\n"
      ]
